Sat Mar  8 00:07:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* debug.scm: Removed `display-application'.  (Replaced by
 	primitive procedure.)

	* boot-9.scm (beautify-user-module!): Don't add the root module
	interface to the end of the use-list of the root module.

Wed Mar  5 20:30:24 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: check use-emacs-interface for emacs support.

Sun Mar  2 19:47:14 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (scm-style-repl): call repl-report-start-timing if
	read gets EOF.
	* (exit): alias for quit.

Sun Mar  2 05:25:11 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (error-catching-loop thunk): use a status variable to
	return the quit args.
	(scm-style-repl): call -quit, passing return value from
	error-catching-repl.  Make -quit return its args.
	stand-alone-repl: comment out, since it seems unused.

	(error-catching-loop thunk): discard trailing junk after a (quit).

Sat Mar  1 15:24:39 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Removed the old printer code.

	* r4rs.scm (apply, call-with-current-continuation): Added comment
	explaining why apply and call/cc need to be closures.

	* boot-9.scm (apply, call-with-current-continuation): Bugfix:
	Removed. These definitions are already present in r4rs.scm.

	* debug.scm (trace-entry, trace-exit): Check that we're on a repl
 	stack before printing traced frames; Re-enable trace flag at end
 	of handlers.

Sat Mar  1 00:10:38 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* debug.scm: Add hook for reset of trace level at abort.

	* boot-9.scm (run-hooks): New procedure.
	(add-hooks!): New macro.
	Change hooks to use these functions.

*	* debug.scm: *Warning* This feature is a bit premature.  I add
 	it anyway because 1. it is very useful, and, 2. you can start
	making it less premature by complaining to me and by modifying
	the source! :-)
	(trace): Given one or more procedure objects, trace each one.